# dwarf-p-cloudsc

./: CMakeLists.txt  README.md  bundle.yml
.github/workflows/: build-hpc.yml  build.yml
arch/bsc/arriesgado/: env.sh  toolchain.cmake
arch/ecmwf/gh/: env.sh  toolchain.cmake
arch/ecmwf/hpc2020/nvhpc/22.11/: env.sh
arch/eurohpc/lumi/cray-gpu/17.0.1/: env.sh
arch/mlux/nvhpc/22.3/: env.sh  toolchain.cmake
arch/toolchains/: mlux-cuda.cmake
cmake/features/: CUDA.cmake
src/: CMakeLists.txt
src/cloudsc_fortran/: cloudsc.F90  cloudsc_driver_field_mod.F90
src/cloudsc_fortran_atlas/: CMakeLists.txt  cloudsc_driver_mod.F90  cloudsc_global_atlas_state_mod.F90  dwarf_cloudsc_atlas.F90  expand_atlas_mod.F90  validate_atlas_mod.F90
src/cloudsc_gpu/: CMakeLists.txt  cloudsc_driver_gpu_sccC_mod.F90  cloudsc_driver_gpu_scc_field_async_mod.F90  cloudsc_driver_gpu_scc_field_blocked_mod.F90  cloudsc_driver_gpu_scc_field_mod.F90  cloudsc_driver_std_par_scc_k_caching_mod.F90  cloudsc_driver_std_par_scc_mod.F90  cloudsc_gpu_sccC_mod.F90  cloudsc_std_par_scc_k_caching_mod.F90  cloudsc_std_par_scc_mod.F90  dwarf_cloudsc_gpu.F90
src/cloudsc_gpu_atlas/: CMakeLists.txt  cloudsc_driver_scc_mod.F90  cloudsc_global_atlas_state_mod.F90  dwarf_cloudsc_atlas.F90
src/cloudsc_loki/: cloudsc_driver_field_loki_mod.F90
src/cloudsc_mix/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/module/: cloudsc_field_state_mod.F90  expand_mod.F90  timer_mod.F90  yoethf.F90  yomcst.F90
